--- a/python/src/TemperatureProfileImplementation_doc.i.in
+++ b/python/src/TemperatureProfileImplementation_doc.i.in
@@ -3,7 +3,7 @@
 
 Notes
 -----
-The temperature profile is used in simulated annealing context
+The temperature profile is used in simulated annealing context.
 "
 %enddef
 %feature("docstring") OT::TemperatureProfileImplementation
@@ -11,17 +11,17 @@ OT_TemperatureProfile_doc
 
 // ---------------------------------------------------------------------
 %define OT_TemperatureProfile_call_doc
-"Compute the temperature T(i).
+"Compute the temperature :math:`T(i)`.
 
 Parameters
 ----------
 i : int
-    The index for whome we seek temperature
+    The index at which the temperature is computed.
 
 Returns
 -------
 temperature:  float
-    The temperature"
+    The temperature :math:`T(i)`."
 %enddef
 %feature("docstring") OT::TemperatureProfileImplementation::operator()
 OT_TemperatureProfile_call_doc
@@ -34,7 +34,7 @@ OT_TemperatureProfile_call_doc
 Returns
 -------
 iMax : int
-    The maximum index value"
+    The maximum index value."
 %enddef
 %feature("docstring") OT::TemperatureProfileImplementation::getIMax
 OT_TemperatureProfile_getIMax
@@ -46,8 +46,8 @@ OT_TemperatureProfile_getIMax
 
 Returns
 -------
-t0 : float
-    The temperature origin"
+T0 : float
+    The temperature origin."
 %enddef
 %feature("docstring") OT::TemperatureProfileImplementation::getT0
 OT_TemperatureProfile_getT0
