--- a/python/src/KrigingResult_doc.i.in
+++ b/python/src/KrigingResult_doc.i.in
@@ -2,9 +2,9 @@
 "Kriging result.
 
 Available constructors:
-    KrigingResult(*inputSample, outputSample, metaModel, residuals, relativeErrors, basis, trendCoefficients, covarianceModel, covarianceCoefficients*)
+    KrigingResult(*inputSample, outputSample, metaModel, basis, trendCoefficients, covarianceModel, covarianceCoefficients*)
 
-    KrigingResult(*inputSample, outputSample, metaModel, residuals, relativeErrors, basis, trendCoefficients, covarianceModel, covarianceCoefficients, covarianceCholeskyFactor, covarianceHMatrix*)
+    KrigingResult(*inputSample, outputSample, metaModel, basis, trendCoefficients, covarianceModel, covarianceCoefficients, covarianceCholeskyFactor, covarianceHMatrix*)
 
 
 Parameters
@@ -13,10 +13,6 @@ inputSample, outputSample : 2-d sequence of float
     The samples :math:`(\vect{x}_k)_{1 \leq k \leq N} \in \Rset^d` and :math:`(\vect{y}_k)_{1 \leq k \leq N}\in \Rset^p`.
 metaModel : :class:`~openturns.Function`
     The meta model: :math:`\tilde{\cM}: \Rset^d \rightarrow \Rset^p`, defined in :eq:`metaModelKrigFinal`.
-residuals : :class:`~openturns.Point`
-    The residual errors.
-relativeErrors : :class:`~openturns.Point`
-    The relative errors.
 basis :  :class:`~openturns.Basis`
     Functional basis of size :math:`b` : :math:`(\varphi^l: \Rset^d \rightarrow \Rset^p)` for each :math:`l \in [1, b]`.
     Its size should be equal to zero if the trend is not estimated.
