--- a/python/src/GumbelCopula_doc.i.in
+++ b/python/src/GumbelCopula_doc.i.in
@@ -1,15 +1,6 @@
 %feature("docstring") OT::GumbelCopula
 "Gumbel copula.
 
-Parameters
-----------
-theta : float
-    Parameter :math:`\theta`, :math:`\theta \geq 1`.
-    
-    Default value is 2.0.
-
-Notes
------
 The Gumbel copula is a bivariate asymmetric Archimedean copula, exhibiting
 greater dependence in the positive tail than in the negative. It is defined by:
 
@@ -24,6 +15,12 @@ And its generator is:
 .. math::
 
     \varphi(t) = (-\log(t))^{\theta}
+
+Parameters
+----------
+theta : float, optional
+    Parameter :math:`\theta`, :math:`\theta \geq 1`.
+    Default value is 2.0.
 
 See also
 --------
