--- a/python/src/JoeCopula_doc.i.in
+++ b/python/src/JoeCopula_doc.i.in
@@ -1,23 +1,6 @@
 %feature("docstring") OT::JoeCopula
 "Joe copula.
 
-Parameters
-----------
-theta : float
-    Parameter :math:`\theta > 0`.
-    
-    Default value is 0.5.
-psi1 : float
-    Parameter :math:`\psi_1 \in [0, 1]`.
-    
-    Default value is 0.5.
-psi2 : float
-    Parameter :math:`\psi_2 \in [0, 1]`.
-    
-    Default value is 0.5.
-
-Notes
------
 The Joe copula is a bivariate copula defined by:
 
 .. math::
@@ -26,8 +9,20 @@ The Joe copula is a bivariate copula defined by:
 
 for :math:`(u_1, u_2) \in [0, 1]^2`
 
-Where :math:`A` is the following Pickand function 
+Where :math:`A` is the following Pickand function
 :math:`t \in [0,1]`, :math:`A(t) = 1 - [ (\psi_1 (1-t))^{-1/ \theta} + (\psi_2 t)^{-1/ \theta} ]^{- \theta}`
+
+Parameters
+----------
+theta : float, optional
+    Parameter :math:`\theta > 0`.
+    Default value is 0.5.
+psi1 : float, optional
+    Parameter :math:`\psi_1 \in [0, 1]`.
+    Default value is 0.5.
+psi2 : float, optional
+    Parameter :math:`\psi_2 \in [0, 1]`.
+    Default value is 0.5.
 
 See also
 --------
