--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -493,6 +493,9 @@ ot_pyinstallcheck_test (InverseWishart_std)
 ot_pyinstallcheck_test (KPermutationsDistribution_std)
 ot_pyinstallcheck_test (KernelMixture_std)
 ot_pyinstallcheck_test (KernelSmoothing_std)
+if (NOT PROJECT_BINARY_DIR STREQUAL PROJECT_SOURCE_DIR)
+  execute_process (COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/t_KernelSmoothing_segfault.csv ${CMAKE_CURRENT_BINARY_DIR})
+endif ()
 ot_pyinstallcheck_test (Laplace_std)
 ot_pyinstallcheck_test (LaplaceFactory_std)
 ot_pyinstallcheck_test (LeastSquaresDistributionFactory_std IGNOREOUT)
