--- a/python/src/EfficientGlobalOptimization_doc.i.in
+++ b/python/src/EfficientGlobalOptimization_doc.i.in
@@ -1,13 +1,14 @@
 %feature("docstring") OT::EfficientGlobalOptimization
 "Efficient Global Optimization algorithm.
 
-The EGO algorithm [jones1998]_ is an adaptative optimization method based on
-kriging.
+.. warning::
+    This class is experimental and likely to be modified in future releases.
+    To use it, import the ``openturns.experimental`` submodule.
+
+The EGO algorithm [jones1998]_ is an adaptative optimization method based on Gaussian process regression.
 An initial design of experiment is used to build a first metamodel.
-At each iteration a new point that maximizes a criterion is chosen as
-optimizer candidate.
-The criterion uses a tradeoff between the metamodel value and the conditional
-variance.
+At each iteration a new point that maximizes a criterion is chosen as optimizer candidate.
+The criterion uses a tradeoff between the metamodel value and the conditional variance.
 Then the new point is evaluated using the original model and the metamodel is
 relearnt on the extended design of experiment.
 
@@ -15,10 +16,8 @@ Parameters
 ----------
 problem : :class:`~openturns.OptimizationProblem`
     The optimization problem to solve
-krigingResult : :class:`~openturns.KrigingResult`
-    The result of the meta-model on the first design of experiment
-noise : :class:`~openturns.Function`
-    Noise model used on design experiment points, and also for improvement optimization
+gprResult : :class:`~openturns.experimental.GaussianProcessRegressionResult`
+    The result of the metamodel on the first design of experiment
 
 Notes
 -----
@@ -35,21 +34,18 @@ the mean improvement:
 
 .. math::
 
-    \mathbb{E}\left[I(x_{new})\right] = \mathbb{E}\left[max(f_{min} - Y_{new}, 0)\right]
+    EI(x_{new}) = \mathbb{E}\left[I(x_{new})\right] = \mathbb{E}\left[max(f_{min} - Y_{new}, 0)\right]
 
-This criterion is explicited using the kriging mean and variance:
+This criterion is explicited using the Gaussian process mean and variance:
 
 .. math::
 
     \mathbb{E}\left[I(x_{new})\right] = (f_{min} - m_K(x_{new})) \Phi\left( \frac{f_{min} - m_K(x_{new})}{s_K(x_{new})} \right) + s_K(x_{new}) \phi\left( \frac{f_{min} - m_K(x_{new})}{s_K(x_{new})} \right)
 
-An optional observation noise variance can be provided:
-
-.. math:: Y_{obs} = Y(x) + \sigma_{\epsilon}(x) \epsilon
-
-In that case the AEI (Augmented Expected Improvement) formulation is used.
-As we don't have access to the real minimum of the function anymore a quantile
-of the kriging prediction is used, with the constant :math:`c`:
+In case the covariance model of the Gaussian process model has a non-zero nugget factor :math:`\sigma_{\epsilon}`
+(i.e. the emulated function is noisy) the AEI (Augmented Expected Improvement) formulation is used.
+Because we do not have access to the real minimum of the function in this case, a quantile
+of the Gaussian process conditional mean is used, with the constant :math:`c`:
 
 .. math:: u(x) = m_K(x) + c s_K(x)
 
@@ -57,7 +53,7 @@ This criterion is minimized over the design points:
 
 .. math:: x_{min} = \argmax_{x_i} (u(x_i))
 
-The AEI criterion reads:
+The AEI criterion is:
 
 .. math::
 
@@ -69,11 +65,6 @@ with
 
     \mathbb{E}\left[max(m_K(x_{min}) - Y_{new}, 0)\right] = (m_K(x_{min}) - m_K(x_{new})) \Phi\left( \frac{m_K(x_{min}) - m_K(x_{new})}{s_K(x_{new})} \right) + s_K(x_{new}) \phi\left( \frac{m_K(x_{min}) - m_K(x_{new})}{s_K(x_{new})} \right)
 
-A less computationally expensive noise function can be provided through
-:func:`setNoiseModel()` to evaluate :math:`\sigma^2_{\epsilon}(x)`
-for the improvement criterion optimization, the objective being only used to
-compute values and associated noise at design points.
-
 By default the criteria is minimized using :class:`~openturns.MultiStart`
 with starting points uniformly sampled in the optimization problem bounds,
 see :func:`setMultiStartExperimentSize` and :func:`setMultiStartNumber`.
@@ -82,30 +73,30 @@ This behavior can be overridden by using another solver with :func:`setOptimizat
 Examples
 --------
 >>> import openturns as ot
+>>> import openturns.experimental as otexp
 >>> ot.RandomGenerator.SetSeed(0)
 >>> dim = 4
->>> model = ot.SymbolicFunction(['x1', 'x2', 'x3', 'x4'],
-...     ['x1*x1+x2^3*x1+x3+x4'])
+>>> model = ot.SymbolicFunction(['x1', 'x2', 'x3', 'x4'], ['x1*x1+x2^3*x1+x3+x4'])
 >>> model = ot.MemoizeFunction(model)
 >>> bounds = ot.Interval([-5.0] * dim, [5.0] * dim)
 >>> problem = ot.OptimizationProblem()
 >>> problem.setObjective(model)
 >>> problem.setBounds(bounds)
->>> experiment = ot.Composite([0.0] * dim, [1.0, 2.0, 4.0])
->>> inputSample = experiment.generate()
+>>> inputSample = ot.JointDistribution([ot.Uniform(-5.0, 5.0)] * dim).getSample(30)
 >>> outputSample = model(inputSample)
->>> print('Initial minimum output value: ', outputSample.getMin())
-Initial minimum output value:  [-248]
+>>> yMin0 = outputSample.getMin()
 >>> covarianceModel = ot.SquaredExponential([2.0] * dim, [0.1])
 >>> basis = ot.ConstantBasisFactory(dim).build()
->>> kriging = ot.KrigingAlgorithm(inputSample, outputSample, covarianceModel, basis)
->>> kriging.run()
->>> algo = ot.EfficientGlobalOptimization(problem, kriging.getResult())
+>>> fitter = otexp.GaussianProcessFitter(inputSample, outputSample, covarianceModel, basis)
+>>> fitter.run()
+>>> gpr = otexp.GaussianProcessRegression(fitter.getResult())
+>>> gpr.run()
+>>> algo = otexp.EfficientGlobalOptimization(problem, gpr.getResult())
 >>> algo.setMaximumCallsNumber(2)
 >>> algo.run()
 >>> result = algo.getResult()
->>> updatedKrigingResult = algo.getKrigingResult()
->>> updatedOutputSample = updatedKrigingResult.getOutputSample()
+>>> updatedGPRResult = algo.getGaussianProcessRegressionResult()
+>>> updatedOutputSample = updatedGPRResult.getOutputSample()
 >>> yMin = updatedOutputSample.getMin()
 "
 
@@ -242,7 +233,7 @@ b : float
 Parameters
 ----------
 c : float
-    Used to define a quantile of the kriging prediction at the design points.
+    Used to define a quantile of the Gaussian process prediction at the design points.
     :math:`u(x)=m_K(x)+c*s_K(x)`"
 
 // ---------------------------------------------------------------------
@@ -253,7 +244,7 @@ c : float
 Returns
 -------
 c : float
-    Used to define a quantile of the kriging prediction at the design points.
+    Used to define a quantile of the Gaussian process prediction at the design points.
     :math:`u(x)=m_K(x)+c*s_K(x)`"
 
 // ---------------------------------------------------------------------
@@ -317,17 +308,15 @@ noiseModel : :class:`~openturns.Function`
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::EfficientGlobalOptimization::getKrigingResult
-"Retrieve the Kriging result.
+%feature("docstring") OT::EfficientGlobalOptimization::getGaussianProcessRegressionResult
+"Retrieve the GPR result.
 
 Notes
 -----
-Before :meth:`run` is called, this method returns the
-:class:`~openturns.KrigingResult` passed to the constructor.
-Once :meth:`run` has been called, it returns an updated
-:class:`~openturns.KrigingResult` that takes new observations into account.
+Before :meth:`run` is called, this method returns the result passed to the constructor.
+Once :meth:`run` has been called, it returns an updated result that takes new observations into account.
 
 Returns
 -------
-krigingResult : :class:`~openturns.KrigingResult`
-    Kriging result that takes all observations into account."
+gprResult : :class:`~openturns.experimental.GaussianProcessRegressionResult`
+    Result that takes all observations into account."
