--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -877,7 +877,9 @@ if (MATPLOTLIB_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_optimization_rosenbrock PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_advanced_mle_estimator PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_kriging_advanced PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_gpr_advanced PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_kriging_hyperparameters_optimization PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_gpr_hyperparameters_optimization PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_kriging_vs_gpr PROPERTIES DISABLED TRUE)
   endif ()
   if (NOT Pagmo_FOUND)
