Add an example comparing old and new kriging API.
An exhaustive example comparing old and new API

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -877,6 +877,7 @@ if (MATPLOTLIB_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_advanced_mle_estimator PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_kriging_advanced PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_kriging_hyperparameters_optimization PROPERTIES DISABLED TRUE)
+    set_tests_properties (pyinstallcheck_example_plot_kriging_vs_gpr PROPERTIES DISABLED TRUE)
   endif ()
   if (NOT Pagmo_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_optimization_pagmo PROPERTIES DISABLED TRUE)
